test_case/rust-lang_rust/58566_465150337_67.rs
\n\nWith this approach, x and y share ownership of the data via the `Rc` (reference\ncount type). `RefCell` essentially performs runtime borrow checking: ensuring\nthat at most one writer or multiple readers can access the data at any one time.\n\nIf you wish to learn more about ownership in Rust, start with the chapter in the\nBook:\n\nhttps://doc.rust-lang.org/book/ch04-00-understanding-ownership.html\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":306,"byte_end":307,"line_start":19,"line_end":19,"column_start":22,"column_end":23,"is_primary":false,"text":[{"text":"        drop_unsized(y);","highlight_start":22,"highlight_end":23}],"label":"value moved here","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":331,"byte_end":332,"line_start":20,"line_end":20,"column_start":22,"column_end":23,"is_primary":true,"text":[{"text":"        drop_unsized(y); //~ERROR use of moved value","highlight_start":22,"highlight_end":23}],"label":"value used here after move","suggested_replacement":null,"suggestion_applicability":null,"expansion":null},{"file_name":"/checkout/src/test/ui/unsized-locals/double-move.rs","byte_start":277,"byte_end":278,"line_start":18,"line_end":18,"column_start":13,"column_end":14,"is_primary":false,"text":[{"text":"        let y = *x;","highlight_start":13,"highlight_end":14}],"label":"move occurs because `y` has type `str`, which does not implement the `Copy` trait","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0382]: use of moved value: `y`\n  --> /checkout/src/test/ui/unsized-locals/double-move.rs:20:22\n   |\nLL |         let y = *x;\n   |             - move occurs because `y` has type `str`, which does not implement the `Copy` trait\nLL |         drop_unsized(y);\n   |                      - value moved here\nLL |         drop_unsized(y); //~ERROR use of moved value\n   |                      ^ value used here after move\n\n"}
[01:30:22] {"message":"use of moved value: `x`","code":{"code":"E0382","explanation":"\nThis error occurs when an attempt is made to use a variable after its contents\nhave been moved elsewhere. For example:\n\n